# MOON

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  example_config.yaml  install.sh  moon.py  prop.py  pyproject.toml
.docker/: Dockerfile  entrypoint.sh
.github/workflows/: deploy.yml  docker.yml
ModelMonitor/: .gitignore
ModelMonitor/config_generator/: config_gen.py  xml_parser.py
ModelMonitor/modeloracle/: pom.xml
ModelMonitor/modeloracle/src/main/java/io/github/convince/moon/: IOEntry.java  Message.java  MessageHandler.java  Oracle.java  PeriodicChecker.java  StateMachine.java
ModelOracle/src/: Oracle.java
docker/: README.md
docs/source/: conf.py  index.rst  installation.rst  tutorial.rst  usage.rst
example/: Dockerfile  monitor_config_template.yaml
example/ROSConFRDE_tutorial/: prop1.py
example/tutorial/: monitor_example.yaml
examples/ROSConFRDE_tutorial/: prop2.py  utils.md
examples/ROSConFRDE_tutorial/sim_ws/src/simexec/simexec/: exec.py  hold.py
examples/UC3-demo/: docker-compose.yml
examples/tutorial/: property_example.py
roscon_res/: conf.yaml  prop3.py  utils.md
roscon_res/sim_ws/src/simexec/: package.xml  setup.cfg  setup.py
roscon_res/sim_ws/src/simexec/simexec/: move_drop.py  pick_drop.py
src/: config_generator.py  generator  generator.py  generator_main.py  monitor_config.yaml  oracle.py  pattern_translator.py  prop.py
src/MOON/code/monitor/: .packagexml  CMakeLists.txt
src/MOON/code/monitor/scripts/: placeholder
src/template/: action_monitor.py.j2  monitor_config.yaml.j2  node_script.py.j2  property.py.j2
src/template/action-monitor-package/: cookiecutter.json
src/template/action-monitor-package/{{ cookiecutter.package_name }}/: package.xml  setup.cfg  setup.py
