[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pip>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "MOON"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = "Karim Pedemonte", email = "karim.pedemonte@edu.unige.it"}
]
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
keywords = []
dependencies = [
    "websocket-client",
    "rospy_message_converter",
    "pyyaml",
    "reelay",
    "jinja2",
    "cookiecutter",
    "jedi",
    "prompt-toolkit",
    # Extra dependencies
]
requires-python = ">=3.10"

[tool.setuptools.package-data]
"MOON" = ["resources", "code/**/*"]

[project.scripts]
moon_config = "config_generator:main"
moon_generator = "generator_main:main"
moon_oracle = "oracle:main"
